# stub

./: Cargo.toml  README.md
src/: agent.rs  context.rs  lib.rs  llm.rs  main.rs  prompt.rs
src/tools/: bash.rs  edit.rs  file.rs  mod.rs
tests/: context_tests.rs  llm_tests.rs  tools_edit_tests.rs  tools_file_tests.rs
