[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
inquire = "0.6"
futures = "0.3"
similar = { version = "2", features = ["text"] }
regex = "1"
dotenv = "0.15"
async-trait = "0.1.89"
glob = "0.3.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
